# Doom

./: CMakeLists.txt  README.md  run.bat
assets/: map.txt
assets/maps/: levelA.txt  levelB.txt
src/: imageloader.h  main.cpp  raycaster.h
